<resources>
    <string name="app_name">TrakBucks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="set_profile_name">Set Profile Name</string>
    <string name="welcome_to_trakbucks">Welcome to TrakBucks!</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="go">GO</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="select_your_preferred_theme">Select your Preferred Theme.</string>
    <string name="select_theme">Select Theme</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select Currency.</string>
    <string name="select_your_preferred_currency">Select your preferred Currency.</string>
    <string name="edit_profile_name">Edit Profile Name</string>
    <string name="make_the_app_yours">Make the App Yours</string>
    <string name="enter_your_full_name">Enter your Full Name.</string>
    <string name="select_your_theme">Select your Theme.</string>
    <string name="enter_your_name">Enter your Name.</string>
    <string name="set_your_profile_photo">set your profile photo</string>
    <string name="viruj_thakur">Viruj Thakur</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="notifications">notifications</string>
    <string name="todo">TODO</string>
    <string name="income">INCOME</string>
    <string name="_20000">20000</string>
    <string name="expenditure">EXPENDITURE</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="jay_sharma">Jay Sharma</string>
    <string name="all_transactions">All Transactions</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_a_transaction">Add a Transaction</string>
    <string name="add_image">Add Image</string>
    <string name="enter_amount">Enter Amount.</string>
    <string name="add_name">Add Name</string>
    <string name="add_amount">Add Amount</string>
    <string name="amount">Amount</string>
    <string name="add">ADD</string>
    <string name="set_transaction_type">Set Transaction Type</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="add_time">Add Time</string>
    <string name="time">Time</string>
    <string name="enter_the_time">Enter the time.</string>
    <string name="add_date">Add Date</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="update_a_transaction">Update a transaction</string>
    <string name="update_transaction_type">Update Transaction Type</string>
    <string name="Update_image">Update Image</string>
    <string name="update_name">Update Name</string>
    <string name="update_date">Update Date</string>
    <string name="update_time">Update Time</string>
    <string name="update_amount">Update Amount</string>
    <string name="update">UPDATE</string>
</resources>