<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addTransactionfragment"
            type="com.example.trakbucks.AddTransactionScreen" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTransactionScreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/add_transaction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/add_a_transaction"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/set_transaction_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_transaction_text"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/set_transaction_type"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/radio_group_credit_debit"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/set_transaction_type_text">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:text="@string/debit" />

            </RadioGroup>

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group_credit_debit"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_image"
                android:textSize="20sp" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/add_transaction_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/add_image_text"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/_abstract_user_icon_1" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@id/add_transaction_image"
                android:layout_alignBottom="@id/add_transaction_image"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:onClick="@{()->addTransactionfragment.addImage()}"/>

            <TextView
                android:id="@+id/add_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_transaction_image"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_name"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_transaction_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icons8_name_24"
                android:layout_centerHorizontal="true"
                app:endIconMode="clear_text"
                android:layout_below="@id/add_name_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/enter_your_name"
                    android:textSize="20sp"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/add_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_transaction_name"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_amount"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_centerHorizontal="true"
                app:startIconDrawable="@drawable/icons8_money_24"
                android:layout_below="@id/add_amount_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/amount">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    tools:text="@string/enter_amount" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_transaction_amount"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:onClick="@{()->addTransactionfragment.addTransaction()}"
                android:text="@string/add" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>