<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <RelativeLayout
                android:id="@+id/rl_settings_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp">


                <TextView
                    android:id="@+id/settingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings"
                    android:textSize="20sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/make_the_app_yours_text"
                android:text="@string/make_the_app_yours"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"
                android:layout_below="@id/rl_settings_back" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/rl_theme_currency_settings"
                android:layout_below="@id/make_the_app_yours_text">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/theme_dropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/theme"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@drawable/icon_scale_themes">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text="@string/select_your_theme"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currency_dropdown"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/icon_scale_rupee"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_below="@id/theme_dropdown"
                    android:hint="@string/currency">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/select_currency"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_changes_button"
                android:text="@string/save_changes"
                android:layout_below="@id/rl_theme_currency_settings"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"/>


        </RelativeLayout>

    </ScrollView>

</layout>